force-app/main/default/objects/Production_Time__c/Production_Time__c.object-meta.xml
<CustomObject>
    <description>Holds a reference to the estimated/expected Times to produce a Finished Good</description>
    <label>Production Time</label>
    <nameField>
        <displayFormat>PT-{0000000000}</displayFormat>
        <label>Production Time Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>