force-app/main/default/objects/Production_Time__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <inlineHelpText>Estimated/Expected Time to Finish Production in calendar Days</inlineHelpText>
    <label>Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>