force-app/main/default/objects/Production_Time__c/fields/Extra_Days__c.field-meta.xml
<CustomField>
    <fullName>Extra_Days__c</fullName>
    <label>Extra Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>