force-app/main/default/objects/Production_Time__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <label>Factory</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Production Times</relationshipLabel>
    <relationshipName>Production_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>