force-app/main/default/objects/Production_Time__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Times</relationshipLabel>
    <relationshipName>Production_Times</relationshipName>
    <type>Lookup</type>
</CustomField>