force-app/main/default/objects/Production_Time__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <label>Product Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Models</valueSetName>
    </valueSet>
</CustomField>