force-app/main/default/objects/Production_Time__c/fields/Production_Time_Name__c.field-meta.xml
<CustomField>
    <fullName>Production_Time_Name__c</fullName>
    <label>Production Time Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>