force-app/main/default/objects/Production_Time__c/fields/Reclamation__c.field-meta.xml
<CustomField>
    <fullName>Reclamation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reclamation</label>
    <type>Checkbox</type>
</CustomField>