force-app/main/default/objects/Production_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Factory__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Reclamation__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Days__c</columns>
    <columns>Extra_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>