force-app/main/default/objects/Production_Time__c/listViews/LGR_Production_Times.listView-meta.xml
<ListView>
    <fullName>LGR_Production_Times</fullName>
    <columns>NAME</columns>
    <columns>Factory__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Reclamation__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Days__c</columns>
    <columns>Extra_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>LG</value>
    </filters>
    <label>LGR Production Times</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>